[project]
name = "redblacksda"
version = "0.1.0"
description = "The framing, solution, and simulation of the Red and Black betting problem as a Sequential Decision Making problem."
authors = [
    {name = "SearchNotForMe"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "polars (>=1.32.0,<2.0.0)",
    "dask (>=2025.7.0,<2026.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "rllib (>=0.0.1,<0.0.2)",
    "nlopt (>=2.9.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "jax-metal (>=0.1.1,<0.2.0)",
    "jax (>=0.7.0,<0.8.0)",
    "jaxlib (>=0.7.0,<0.8.0)",
    "hdf (>=2023.12.4,<2024.0.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "mlx (>=0.27.1,<0.28.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
